API now works, although it still needs to be polished and fully fleshed out. It's probably pretty fragile at this stage of the game. Made some fake database functions so I could get this to work. We should just be able to swap those out of the real thing later on. We're also still lacking authentication of any kind. I think the best way to go would be to rely on token based authentication for the API and session based authentication for everything else. It shouldn't be terribly hard to integrate either of those with LDAP. Code asthetically less than perfect at the moment, I'll clean that up when I'm a bit more awake.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,8 @@
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> 
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/shrunk.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/shrunk.css">
 </head>
 <body>
     <div class="container">
@@ -20,7 +20,11 @@
 		<input type="text" name="url" placeholder="search">
 	    </div>
 	    <div class="right-nav">
-		<a href="" class="logout" >Log out</a>
+		<div class="user">Me
+		    <ul class="">
+			<a href="" class="logout" >Log out</a>
+		    </ul>
+		</div>
 	    </div>
 	</div>
 
